force-app/main/default/objects/ICF_Template_and_Namespace__c/ICF_Template_and_Namespace__c.object-meta.xml
<CustomObject>
    <label>ICF Template and Namespace</label>
    <nameField>
        <label>ICF Template and Namespace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICF Template and Namespaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>