force-app/main/default/objects/ICF_Template_and_Namespace__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <defaultValue>&quot;CCC&quot;</defaultValue>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>