force-app/main/default/objects/ICF_Template_and_Namespace__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <label>Namespace</label>
    <length>100</length>
    <type>Text</type>
</CustomField>