force-app/main/default/objects/ICF_Template_and_Namespace__c/fields/New_Channel__c.field-meta.xml
<CustomField>
    <fullName>New_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Channel</label>
    <type>Checkbox</type>
</CustomField>