force-app/main/default/objects/ICF_Template_and_Namespace__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>